[gd_scene load_steps=14 format=4 uid="uid://dranhg1mteucc"]

[ext_resource type="PackedScene" uid="uid://buhu7tmsbjtc6" path="res://Prefab/TowerDefense/Character/TowerDefenseZombie.tscn" id="1"]
[ext_resource type="Script" uid="uid://d1dm4iy5oh4uj" path="res://Asset/Anime/Character/Zombie/Chapter2/Polestriker/Scene/TowerDefenseZombiePolestriker.gd" id="2"]
[ext_resource type="Resource" uid="uid://d2sbdms4rwoc" path="res://Asset/Anime/Character/Zombie/Chapter2/Polestriker/Config/TowerDefenseZombiePolestriker.tres" id="3"]
[ext_resource type="Resource" uid="uid://bjcykhglyf5k2" path="res://Asset/Anime/Character/Zombie/Chapter2/Polestriker/DamagePoint/Config/ZombiePolestrikerDamagePointArm.tres" id="4"]
[ext_resource type="Resource" uid="uid://lyh6x8uh57rs" path="res://Asset/Anime/Character/Zombie/Chapter2/Polestriker/DamagePoint/Config/ZombiePolestrikerDamagePointHead.tres" id="5"]
[ext_resource type="Resource" uid="uid://c571ru6n1jxpa" path="res://Asset/Anime/Character/Zombie/Chapter2/Polestriker/Armor/Config/ZombiePolestrikerArmorHelmet.tres" id="6"]
[ext_resource type="PackedScene" uid="uid://d2caaj1sa2ywr" path="res://Asset/Anime/Character/Zombie/Chapter2/Polestriker/ZombiePolestriker.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://b1yls1ul6s8q4" path="res://Asset/Texture/Character/Armor/Helmet/ZombieHelmet1.png" id="8"]
[ext_resource type="PackedScene" uid="uid://bjm31m10ujp84" path="res://Asset/Anime/Character/Zombie/WaterLine/ZombieWaterLine.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://dir0f8lu1l3b3" path="res://Script/Component/TowerDefense/Character/AttackComponent/AttackComponent.tscn" id="10"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="11"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="12"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_431aq"]
size = Vector2(100, 76)

[node name="TowerDefenseZombiePolestriker" node_paths=PackedStringArray("duckytobeSprite", "waterLineSprite", "sprite", "headSlot") instance=ExtResource("1")]
script = ExtResource("2")
walkSpeedScale = 1.5
duckytobeSprite = NodePath("SpriteGroup/TransformPoint/ZombiePolestriker/ZombieDuckytube")
waterLineSprite = NodePath("SpriteGroup/TransformPoint/ZombieWaterLine")
garlicReplace = "Zombie_football_head.png"
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/ZombiePolestriker")
headSlot = NodePath("SpriteGroup/TransformPoint/ZombiePolestriker/HeadSlot")
damagePart = {
"Arm": ExtResource("4"),
"Head": ExtResource("5"),
"Helmet": ExtResource("6")
}
PreviewDamagePointPersontage = 1.0
Armor = ["Helmet"]
DamagePartSlot/Arm = NodePath("SpriteGroup/TransformPoint/ZombiePolestriker/ArmSlot")
DamagePartSlot/Head = NodePath("SpriteGroup/TransformPoint/ZombiePolestriker/HeadSlot")
DamagePartSlot/Helmet = NodePath("SpriteGroup/TransformPoint/ZombiePolestriker/HemetSlot")

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(23, 44)

[node name="ZombiePolestriker" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot", "layerSprite") instance=ExtResource("7")]
position = Vector2(-23, -44)
layerSlot = [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]
layerSprite = [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]
Animation/MediaReplace/Zombie_football_red_helmet.png = ExtResource("8")

[node name="ZombieDuckytube" parent="SpriteGroup/TransformPoint/ZombiePolestriker" index="0"]
position = Vector2(-11.8565, -45.1755)
rotation = 0.0961803

[node name="HeadSlot" parent="SpriteGroup/TransformPoint/ZombiePolestriker" index="1"]
position = Vector2(-7.8603, -49.6485)
rotation = -0.0640886
scale = Vector2(0.799746, 0.799746)

[node name="ArmSlot" parent="SpriteGroup/TransformPoint/ZombiePolestriker" index="2"]
position = Vector2(10.9608, -0.294644)
rotation = -0.200713

[node name="HemetSlot" parent="SpriteGroup/TransformPoint/ZombiePolestriker" index="3"]
position = Vector2(-10.8481, -50.3174)
rotation = -0.0640886
scale = Vector2(0.799746, 0.799746)

[node name="ZombieWaterLine" parent="SpriteGroup/TransformPoint" index="1" instance=ExtResource("9")]
visible = false
position = Vector2(-12, -50)
useTween = true

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(12.6, 40)

[node name="IcetrapSprite" parent="." index="4"]
position = Vector2(20.6, 34)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(4, -2)

[node name="AttackComponent2" parent="." index="6" node_paths=PackedStringArray("checkArea") instance=ExtResource("10")]
unique_name_in_owner = true
checkArea = NodePath("CheckJumpArea")
checkIntreval = 0
checkLine = true
checkTall = true

[node name="CheckJumpArea" type="Area2D" parent="AttackComponent2" index="0"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent2/CheckJumpArea" index="0"]
position = Vector2(-26, -1)
shape = SubResource("RectangleShape2D_431aq")

[node name="GroundMoveComponent" parent="." index="9" node_paths=PackedStringArray("groundNode")]
groundNode = NodePath("../SpriteGroup/TransformPoint/ZombiePolestriker/GroundSlot")

[node name="Run" type="Node" parent="StateChart/CompoundState" index="4"]
script = ExtResource("11")

[node name="Jump" type="Node" parent="StateChart/CompoundState" index="5"]
script = ExtResource("11")

[node name="ToRun" type="Node" parent="StateChart/CompoundState" index="10"]
script = ExtResource("12")
to = NodePath("../Run")
event = &"ToRun"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="StateChart/CompoundState" index="11"]
script = ExtResource("12")
to = NodePath("../Jump")
event = &"ToJump"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Run" to="." method="RunEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Run" to="." method="RunExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Run" to="." method="RunProcessing"]
[connection signal="state_entered" from="StateChart/CompoundState/Jump" to="." method="JumpEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Jump" to="." method="JumpExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Jump" to="." method="JumpProcessing"]

[editable path="SpriteGroup/TransformPoint/ZombiePolestriker"]
